--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,12 +28,12 @@
          %li Вопросы и ответы
          %li Доставка и оплата
          %li Новости
-   %tr{:style=>"background:url('/images/center-line.jpg') no-repeat;"}
+   %tr{:style=>"background:url('/images/center-line.jpg') no-repeat;background-position:top;"}
     %td.left_menu{:rowspan=>2, :style=>"border-right:black solid 1px;font:18px verdana;font-weight:bold;height:43px;vertical-align:top;width:220px;max-width:220px;border-bottom:black solid 1px;"}
      %div{:style=>"margin-right:5px;padding-right:2px;"}
-      = render :partial => 'sections/left_menu_item', :collection => Section.where('parent_id is null').order('position nulls last')
+      = render :partial => 'sections/left_menu_item', :collection => Section.where('parent_id is null').where(:active=>true).order('position nulls last')
 
-    %td{:style=>"width:652px;height:152px;background:url(/images/ramka-mordolenta.png);background-position:0px 10px;"}
+    %td{:style=>"width:652px;height:152px;background:url(/images/ramka-mordolenta.png);background-position:4px 10px;"}
      = render :partial => "main/mordolenta"
     %td{:style=>"vertical-align:top;width:120px;border-left: 1px black;text-align:center;"}
      %div
