--- a/public/stylesheets/imp.css
+++ b/public/stylesheets/imp.css
@@ -35,7 +35,8 @@ a:visited:hover.umenu {
 }
 .l1 {
  list-style-image: url('/images/Right.png');
- font: 14px bold verdana;
+ font: 14px verdana;
+ font-weight: bold;
 }
 
 .l2 {
@@ -66,6 +67,7 @@ ul.lmenu {
 }
 
 .content {
+ padding-left: 0.5em;
  color: #7d4900;
  font: 14px verdana;
 }
