--- a/app/views/admin/products/_product_form.html.haml
+++ b/app/views/admin/products/_product_form.html.haml
@@ -14,6 +14,9 @@
  = f.label :short_descr, "Краткое описание"
  = f.text_area :short_descr
 %div
+ = f.label :priority, "Приоритет"
+ = f.text_field :priority
+%div
  = f.label :active, "Показывать"
  = f.check_box :active
 %div
