--- a/app/views/cart/index.html.haml
+++ b/app/views/cart/index.html.haml
@@ -20,5 +20,25 @@
     %td= price
     %td= button_to "Удалить", cart_index_path(:product=>product.id, :amount=>item[:amount]), :method=>:delete
  %div{:style=>"text-align:right;"}= "На сумму: #{sum}"
+ %div
+  %h3 Зарегистрировать заказ
+  %div
+   %p Для регистрации заказа заполните форму (обязательные для заполнения поля помечены *)
+   %div
+    = form_for @purchase, :url => purchases_path do |form|
+     %table
+      %tr
+       %td= form.label :u_name, "Имя *"
+       %td= form.text_field :u_name
+      %tr
+       %td= form.label :u_surname, "Фамилия"
+       %td= form.text_field :u_surname
+      %tr
+       %td= form.label :u_mail, "E-Mail *"
+       %td= form.text_field :u_mail
+      %tr
+       %td= form.label :u_phone, "Номер телефона *"
+       %td= form.text_field :u_phone
+     = form.submit "Создать заказ"
 -else
  Ваша корзина пуста
