--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -14,6 +14,6 @@
    -#%span{:style=>"padding:5px;font: 18px bold verdana;color:#00a651;"}Купить
  %h3 #{@product.name}
  ! #{@product.description}
- %div{:style=>"padding-top:15px;"} Цена #{@product.price} руб.
+ %div{:style=>"padding-top:15px;color:red;"} Цена #{@product.price} руб.
  %div{:style=>":height:20px;clear: both;"}
 
