--- a/app/views/main/about.html.haml
+++ b/app/views/main/about.html.haml
@@ -6,11 +6,11 @@
   
 %p Давайте познакомимся? 
 %p Нас двое.
-= image_tag 'IMG_1392-0.jpg', :style=>"float:left;padding:15px;width:150px;height:225px;"
+= image_tag 'cat.jpg', :style=>"float:left;padding:15px;width:150px;height:225px;"
 %p Катерина
 %p Любит настоящих людей, настоящую музыку и настоящий чай. Общительная, весёлая, б\вп, с ч\ю - весь комплект, о котором обычно принято упоминать на сайтах знакомств, прилагается. С удовольствием познакомится и пообщается со всеми, кто считает, что чай из пакетиков – это издевательство над благородным напитком и с теми, для кого пить чай – это не просто привычка, а настоящая церемония наслаждения.
 %div{:style=>"clear:both;"}
-= image_tag 'dsc00718.jpg', :style=>"float:right;padding:15px;width:150px;height:200px;"
+= image_tag 'yar.jpg', :style=>"float:right;padding:15px;width:200px;height:212px;"
 %p Ярослав.
 %p Психолог и бизнес-тренер. Выучил немало перворазрядников, кандидатов и мастеров этого вида спорта. Харизматичен, умён. Обожает составлять психологические портреты собеседников, которыми потом умело пользуется для втирания в доверие. После беседы с ним вы сами не заметите, как станете заваривать чай строго в глиняном чайнике ручной работы и будете по запаху отличать китайский чай от цейлонского. А ещё Ярослав, если его разговорить за чашечкой чая, может многое рассказать о правильном питании и здоровом образе жизни.
 %p Данный проект организован сразу с несколькими далеко идущими целями:
