--- a/app/views/user_notification/purchase_created.text.haml
+++ b/app/views/user_notification/purchase_created.text.haml
@@ -3,4 +3,4 @@
 - @purchase.cart_items.each do |item|
  = "#{item.amount} #{item.product.name}"
 
-Вы можете посмотреть свой заказ по ссылке #{purchase_url(@purchase.id)}
+Вы можете посмотреть свой заказ по ссылке http://cup-of.ru/purchases/#{@purchase.id}
