--- a/app/views/admin/main/index.html.haml
+++ b/app/views/admin/main/index.html.haml
@@ -1,2 +1,3 @@
 = link_to "Список продуктов", admin_products_path
 = link_to "Список разделов", admin_sections_path
+= link_to "Покупки", admin_purchases_path
