--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -25,3 +25,32 @@
  %li Тихое спокойное уединение
 %p Неважно, будете ли вы сами священнодействовать <a href="/sections/77">над туркой</a>, или доверитесь <a href="/sections/80">кофеварке</a>. Важен результат — только из качественных <a href="/sections/45">зерен</a> получается восхитительный будоражащий напиток. В нашем магазине вы можете купить как <a href="/sections/49">молотый кофе</a>, так и <a href="/sections/39">кофе в зернах</a>. Для себя или своих близких в подарок. И это будет поистине великолепный вкусный кофе!
 
+
+
+%p &nbsp;
+%p А у вас всё готово к уютному чаепитию или к насыщенному кофейному вечеру? 
+%p В таких вещах не может быть ненужных мелочей, есть только важные детали... Без них наслаждение будет неполным, а вкус  — нераскрытым...
+%p Пусть ваш дом станет гостеприимным вместе с нашими заварочными чайниками, турками, кофеварками и красивыми чашками! Сделайте свою чайную церемонию идеальной, используя для неё настоящие китайские принадлежности, изящные подносы и удобные подставки-подогреватели. Не забудьте про сахар, конфеты и маленькие шоколадки — побалуйте своих сладкоежек!  
+%p Хотите согреть любовью и окутать заботой родных? В этом вам помогут наши горячий шоколад и какао — необыкновенно вкусные и действительно теплые напитки...
+%p Вот теперь все готово:
+%ul
+ %li для хорошей компании
+ %li для настоящего праздника
+ %li для ярких будней 
+ %li для семейного взаимопонимания
+ %li просто для себя... 
+%p{:style=>"text-align:right;"} Отныне волшебство роскошного вкуса всегда будет с вами. 
+
+
+%p &nbsp;
+%p Почему именно мы? 
+%p Конкурентов на рынке много, но о них мы не будем вести разговор, мы расскажем вам, почему стоит быть <span style="font-weight:bold;"><span  style="font-size:18px;">нашим</span> горячо любимым клиентом</span>:
+%ul
+ %li Во-первых, покупая у нас любой товар, вы можете быть уверены в его превосходном качестве.  Контроль ведется на всех этапах: от хранения на складе до своевременной доставки, и для всего ассортимента: от чайной ложечки до большой кофеварки.
+ %li Во-вторых, в нашем магазине вы всегда можете найти то, что действительно ищете. У нас огромный выбор товара на самый взыскательный вкус!
+ %li В-третьих,  вы экономите свои время и деньги: при заказе от 1000 рублей, мы быстро и бесплатно доставим вам товар в любую точку Москвы. Хотите узнать больше? Вам в раздел «Доставка и оплата».
+ %li В-четвертых, мы ценим наше сотрудничество и поэтому делаем для вас маленькие приятные сюрпризы. Пожалуйста, будьте готовы к небольшим подаркам при получении заказа
+ %li В-пятых, с нами просто приятно работать. У нас не теряются заказы, не опаздывает доставка, и мы всегда оправдываем доверие клиентов, дорожа ими и своей репутацией.
+%p{:style=>"text-align:right;"} Пора положить начало нашей дружбе, не правда ли?  
+
+=# render :partial => 'main/random_sections_block'
