--- a/app/views/main/search.html.haml
+++ b/app/views/main/search.html.haml
@@ -1,1 +1,15 @@
- 
+- @searches.each do |p|
+ %div{:style=>"width:160px;height:200px;float:left;"}
+  = link_to(image_tag(p.cover(:small), :style=>"padding: 10px;border:0px;"), product_path(p.id))
+  %div{:style=>"padding-left:10px;"}
+   = form_tag cart_index_path, {:method=>:post} do
+    = hidden_field_tag :product, p.id
+    %select{:id=>"ammount", :name=>"amount"}
+     -(1..9).each do |i|
+      %option{:value=>i.to_s} #{i.to_s}
+    = submit_tag "Купить", :style=>"padding:1px;font:18px bold verdana;color:#00a651;background:transparent;"
+ %h3= link_to p.name, product_path(p.id)
+ #{p.short_descr}
+ %div{:style=>"padding-top:15px;color:red;"} Цена #{p.price} руб.
+ %div{:style=>":height:20px;clear: both;"}
+= will_paginate(@searches)
