--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -53,4 +53,4 @@
  %li В-пятых, с нами просто приятно работать. У нас не теряются заказы, не опаздывает доставка, и мы всегда оправдываем доверие клиентов, дорожа ими и своей репутацией.
 %p{:style=>"text-align:right;"} Пора положить начало нашей дружбе, не правда ли?  
 
-=# render :partial => 'main/random_sections_block'
+=# render :partial => 'main/random_sections_block', :locals=>{:to_show => Section.where(:active=>true).where(:parent_id=>[Section.find_by_name('Tea').id, Section.find_by_name('Coffee')]).order('random()').limit(4)}
