articles && minor changes

--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -13,7 +13,8 @@
  %li В подарок
 %p Пусть это будет всего несколько грамм, но это будет несколько  грамм действительно качественного и очень вкусного сорта чая. Побалуйте себя и своих близких!
 %div{:style=>"text-align:center;"} Чашечку чая?
-%p &nbsp;
+= render :partial => 'main/random_sections_block', :locals=>{:to_show => Section.where("active='t' and (parent_id in (:ids) or id in (:ids))", :ids=>[Section.find_by_name('Tea')].map(&:id)).order('random()').limit(4)}
+=# render :partial => 'main/random_sections_block', :locals=>{:to_show => Section.where("active='t' and (parent_id in (:ids) or id in (:ids))", :ids=>[Section.find_by_name('Tea'), Section.find_by_name('Coffee')].map(&:id)).order('random()').limit(4)}
 %div{:style=>"text-align:center;"} Или кофе? 
 %p Маленькая <a href="/sections/72">чашечка</a>, бесподобный <a href="/sections/38">аромат</a> и бархатная пенка... Для утонченных людей, имеющих свой неповторимый стиль... Для тех, кто знает, как ценны минуты по утрам... Для тех, кто умеет получать максимум удовольствия от жизни... Для тех, кто любит роскошь во всех её проявлениях...
 Черный, жгучий, манящий, дарящий тепло... Свежеобжаренные <a href="/sections/34">зерна</a> и дивный опьяняющий запах... Крошечный эспрессо или воздушный капучинно? Нежная робуста или крепкая арабика? Выбирайте свой <a href="/sections/2">кофе</a>, который подарит вам:
@@ -26,12 +27,12 @@
 %p Неважно, будете ли вы сами священнодействовать <a href="/sections/77">над туркой</a>, или доверитесь <a href="/sections/80">кофеварке</a>. Важен результат — только из качественных <a href="/sections/45">зерен</a> получается восхитительный будоражащий напиток. В нашем магазине вы можете купить как <a href="/sections/49">молотый кофе</a>, так и <a href="/sections/39">кофе в зернах</a>. Для себя или своих близких в подарок. И это будет поистине великолепный вкусный кофе!
 
 
+= render :partial => 'main/random_sections_block', :locals=>{:to_show => Section.where("active='t' and (parent_id in (:ids) or id in (:ids))", :ids=>[Section.find_by_name('Coffee')].map(&:id)).order('random()').limit(4)}
 
-%p &nbsp;
-%p А у вас всё готово к уютному чаепитию или к насыщенному кофейному вечеру? 
+%p А у вас всё готово к уютному <a href="/sections/66">чаепитию</a> или к насыщенному кофейному вечеру? 
 %p В таких вещах не может быть ненужных мелочей, есть только важные детали... Без них наслаждение будет неполным, а вкус  — нераскрытым...
-%p Пусть ваш дом станет гостеприимным вместе с нашими заварочными чайниками, турками, кофеварками и красивыми чашками! Сделайте свою чайную церемонию идеальной, используя для неё настоящие китайские принадлежности, изящные подносы и удобные подставки-подогреватели. Не забудьте про сахар, конфеты и маленькие шоколадки — побалуйте своих сладкоежек!  
-%p Хотите согреть любовью и окутать заботой родных? В этом вам помогут наши горячий шоколад и какао — необыкновенно вкусные и действительно теплые напитки...
+%p Пусть ваш дом станет гостеприимным вместе с нашими <a href="/sections/75">заварочными чайниками</a>, <a href="/sections/77">турками</a>, <a href="/sections/80">кофеварками</a> и <a href="/sections/72">красивыми чашками</a>! Сделайте свою чайную церемонию идеальной, используя для неё настоящие <a href="/sections/65">китайские принадлежности</a>, изящные <a href="/sections/67">подносы</a> и удобные <a href="/sections/71">подставки-подогреватели</a>. Не забудьте про <a href="/sections/51">сахар</a>, <a href="/sections/60">конфеты</a> и <a href="/sections/57">маленькие шоколадки</a> &mdash; побалуйте своих сладкоежек!  
+%p Хотите согреть любовью и окутать заботой родных? В этом вам помогут наши <a href="/sections/50">горячий шоколад</a> и <a href="/sections/23">какао</a> — необыкновенно вкусные и действительно теплые напитки...
 %p Вот теперь все готово:
 %ul
  %li для хорошей компании
@@ -53,4 +54,3 @@
  %li В-пятых, с нами просто приятно работать. У нас не теряются заказы, не опаздывает доставка, и мы всегда оправдываем доверие клиентов, дорожа ими и своей репутацией.
 %p{:style=>"text-align:right;"} Пора положить начало нашей дружбе, не правда ли?  
 
-=# render :partial => 'main/random_sections_block', :locals=>{:to_show => Section.where(:active=>true).where(:parent_id=>[Section.find_by_name('Tea').id, Section.find_by_name('Coffee')]).order('random()').limit(4)}
