--- a/app/views/main/_random_sections_block.html.haml
+++ b/app/views/main/_random_sections_block.html.haml
@@ -1,8 +1,10 @@
-.vert_pics{:style => "width:666px;max-width:666px;"}
- - to_show[0, 6].each do |sect|
+.vert_pics{:style => "width:648px;max-width:648px;height:330px;max-height:330px;"}
+ - to_show[0, 4].each do |sect|
   - prods = sect.all_products
   - prod = prods[rand(prods.size)]
   - unless prod.nil?
-   %div{:style=>"width:100px;max-width:100px;padding:5px;text-align:center;"}
-    = image_tag prod.cover(:mord)
-
+   %div{:style=>"float:left;height:300px;max-height:300px;width:150px;max-width:150px;padding:5px;border:solid black 1px;text-align:center;"}
+    = link_to image_tag(prod.cover(:small), :style=>"padding:3px;border:0px;"), product_path(prod.id)
+    %div{:style=>"font-size:14px;font-weight:bold;"}= link_to prod.name, product_path(prod.id)
+    %div{:style=>"font-size:12px;font-weight:normal;text-align:left;"}= prod.short_descr
+    %div{:style=>"color:red;font-size:12px;"}= "Цена #{prod.price} руб."
