--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -54,3 +54,18 @@
    %tr
     %td{:style=>"border-right:black solid 1px;height:20px;margin-right:5px;"} &nbsp;
     %td{:colspan=>2, :style=>"height:20px;"} &nbsp;
+
+  <!-- Yandex.Metrika counter -->
+  <div style="display:none;"><script type="text/javascript">
+  (function(w, c) {
+  (w[c] = w[c] || []).push(function() {
+  try {
+  w.yaCounter2950633 = new Ya.Metrika(2950633);
+  } catch(e) {}
+  });
+  })(window, 'yandex_metrika_callbacks');
+  </script></div>
+  <script src="//mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
+  <noscript><div style="position:absolute"><img src="//mc.yandex.ru/watch/2950633" alt="" /></div></noscript>
+  <!-- /Yandex.Metrika counter -->
+
