--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,2 +1,3 @@
-%h1 Articles#show
-%p Find me in app/views/articles/show.html.haml
+%div{:style=>"margin-bottom:15px;"}
+ %h3= @article.name
+ %div= @article.body
