--- a/app/views/admin/products/_product_form.html.haml
+++ b/app/views/admin/products/_product_form.html.haml
@@ -8,6 +8,9 @@
  = f.label :price, "Цена"
  = f.text_field :price
 %div
+ = f.label :in_store, "На складе"
+ = f.check_box :in_store
+%div
  = f.label :description, "Описание"
  = f.text_area :description
 %div
