--- a/app/views/main/_random_sections_block.html.haml
+++ b/app/views/main/_random_sections_block.html.haml
@@ -5,6 +5,7 @@
   - unless prod.nil?
    %div{:style=>"float:left;height:300px;max-height:300px;width:150px;max-width:150px;padding:5px;border:solid black 1px;text-align:center;"}
     = link_to image_tag(prod.cover(:small), :style=>"padding:3px;border:0px;"), product_path(prod.id)
-    %div{:style=>"font-size:14px;font-weight:bold;"}= link_to prod.name, product_path(prod.id)
-    %div{:style=>"font-size:12px;font-weight:normal;text-align:left;"}= prod.short_descr
+    %div{:style=>"height:130px;max-height:130px;overflow:hidden;"}
+     %div{:style=>"font-size:14px;font-weight:bold;"}= link_to prod.name, product_path(prod.id)
+     %div{:style=>"font-size:12px;font-weight:normal;text-align:left;"}= prod.short_descr #.andand.split(' ')[0, 10].join(' ')
     %div{:style=>"color:red;font-size:12px;"}= "Цена #{prod.price} руб."
