--- a/app/views/sections/show.html.haml
+++ b/app/views/sections/show.html.haml
@@ -1,5 +1,7 @@
 .breadcrumb
  = render :partial => 'main/breadcrumb', :locals=>{:from => @section}
+ %div{:style=>"text-align:right;"}
+  = will_paginate(@products)
 - @products.each do |p|
  %div{:style=>"width:160px;height:200px;float:left;"}
   = link_to(image_tag(p.cover(:small), :style=>"padding: 10px;border:0px;"), product_path(p.id))
@@ -10,8 +12,9 @@
      -(1..9).each do |i|
       %option{:value=>i.to_s} #{i.to_s}
     = submit_tag "Купить", :style=>"padding:1px;font:18px bold verdana;color:#00a651;background:transparent;"
- %h3= link_to p.name, product_path(p.id)
- #{p.short_descr}
- %div{:style=>"padding-top:15px;color:red;"} Цена #{p.price} руб.
- %div{:style=>":height:20px;clear: both;"}
+ %div
+  %h3= link_to p.name, product_path(p.id)
+  #{p.short_descr}
+  %div{:style=>"padding-top:15px;color:red;"} Цена #{p.price} руб.
+  %div{:style=>":height:20px;clear: both;"}
 = will_paginate(@products)
