--- a/app/views/admin/articles/index.html.haml
+++ b/app/views/admin/articles/index.html.haml
@@ -1,2 +1,17 @@
-%h1 Admin::Articles#index
-%p Find me in app/views/admin/articles/index.html.haml
+= link_to "Add", new_admin_article_path
+%table
+ %tr
+  %th id
+  %th name
+  %th body
+  %th active
+  %th on main
+  %th date
+ - Article.all.each do |article|
+  %tr
+   %td= link_to article.id.to_s, edit_admin_article_path(article.id)
+   %td= article.name
+   %td= article.body.split(" ")[0, 30].join " "
+   %td= article.active? ? "Да" : "Нет"
+   %td= article.on_main? ? "Да" : "Нет"
+   %td= article.created_at
