--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,8 +5,8 @@
   = stylesheet_link_tag :all
   = javascript_include_tag :defaults
   = csrf_meta_tag
- %body{:style=>"background-color:#fbebd5;padding:0px;border:0px;margin:0px;"}
-  %table{:style=>"width:1008px;cell-spacing:0px;cell-padding:0px;border-spacing:0px;border:0px;"}
+ %body{:style=>"padding:0px;border:0px;margin:0px;text-align:center;background-color:#a67c52;"}
+  %table{:style=>"background-color:#fbebd5;width:1008px;cell-spacing:0px;cell-padding:0px;border-spacing:0px;border:0px;text-align:left;border-collapse:collapse;"}
    %tr
     %td{:colspan=>3}
      %table{:style=>"height:248px;width:1008px;cell-spacing:0px;cell-padding:0px;border:0px;border-spacing:0px;background:left top no-repeat url(#{image_path('up-background.jpg')});"}
