--- a/app/views/admin/products/_product_form.html.haml
+++ b/app/views/admin/products/_product_form.html.haml
@@ -11,6 +11,9 @@
  = f.label :in_store, "На складе"
  = f.check_box :in_store
 %div
+ = f.label :artikul, "Артикул"
+ = f.text_field :artikul
+%div
  = f.label :description, "Описание"
  = f.text_area :description
 %div
