--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -1,9 +1,10 @@
 = render :partial=>'articles/article_on_main', :locals=>{:article_on_main=>@article}
+%p{:style=>"font-weight:bold;"} Именно это волшебство теперь доступно каждому...
 %p Пузырьки пара с шумом поднимаются в закипающей воде... Немножко заварки, потом еще чуть-чуть... Тепло обволакивает каждую чаинку, а затем...
-%p А затем начинается удивительное таинство... Волшебное рождение  <a href="/sections/1">ЧАЯ</a>...Чаинки, раскрываясь и кружась в самобытном танце, отдают весь свой тонкий насыщенный вкус и дарят дремавшую силу бодрости… Вдохните посильнее. Чувствуете великолепный манящий <a href="/sections/3">аромат</a>? Есть ровно 5 минут, чтоб достать красивые фарфоровые <a href="/sections/70">чашки</a> и приготовиться к <a href="/sections/66">чаепитию</a>.
-%p Сегодня это <a href="/sections/20">пуэр</a>. Завтра утром будет <a href="/sections/19">жасминовый чай</a>... Или же тонизирующий <a href="/sections/18">красный</a>... А может, это будет <a href="/sections/21">молочный улун</a>?  Вы хотите чего-то другого? Ищете <a href="/sections/61">отличный подарок</a>? Вам сюда, выбирайте СВОЙ ЧАЙ. 
-%p Чтобы прикоснуться к роскоши, необязательно иметь много денег. Но обязательно иметь <a href=="/sections/14">баночку хорошего чая</a>.
-%p В нашем магазине вы всегда сможете купить полюбившийся вам <a href="/sections/7">напиток</a>. Выбирайте неспеша свой чай: 
+%p А затем начинается удивительное таинство... Волшебное рождение  <a class="semibold" href="/sections/1">ЧАЯ</a>...Чаинки, раскрываясь и кружась в самобытном танце, отдают весь свой тонкий насыщенный вкус и дарят дремавшую силу бодрости… Вдохните посильнее. Чувствуете великолепный манящий <a class="semibold" href="/sections/3">аромат</a>? Есть ровно 5 минут, чтоб достать красивые фарфоровые <a class="semibold" href="/sections/70">чашки</a> и приготовиться к <a class="semibold" href="/sections/66">чаепитию</a>.
+%p Сегодня это <a class="semibold" href="/sections/20">пуэр</a>. Завтра утром будет <a class="semibold" href="/sections/19">жасминовый чай</a>... Или же тонизирующий <a class="semibold" href="/sections/18">красный</a>... А может, это будет <a class="semibold" href="/sections/21">молочный улун</a>?  Вы хотите чего-то другого? Ищете <a class="semibold" href="/sections/61">отличный подарок</a>? Вам сюда, выбирайте СВОЙ ЧАЙ. 
+%p Чтобы прикоснуться к роскоши, необязательно иметь много денег. Но обязательно иметь <a class="semibold" href=="/sections/14">баночку хорошего чая</a>.
+%p В нашем магазине вы всегда сможете купить полюбившийся вам <a class="semibold" href="/sections/7">напиток</a>. Выбирайте неспеша свой чай: 
 %ul
  %li Для хорошего самочувствия
  %li Для бодрого утра
@@ -13,27 +14,27 @@
  %li Для уютного одиночества
  %li В подарок
 %p Пусть это будет всего несколько грамм, но это будет несколько  грамм действительно качественного и очень вкусного сорта чая. Побалуйте себя и своих близких!
-%div{:style=>"text-align:center;"} Чашечку чая?
+%div{:style=>"text-align:center;"} <b>Чашечку чая?</b>
 = render :partial => 'main/random_sections_block', :locals=>{:to_show => Section.where("active='t' and (parent_id in (:ids) or id in (:ids))", :ids=>[Section.find_by_name('Tea')].map(&:id)).order('random()').limit(4)}
 =# render :partial => 'main/random_sections_block', :locals=>{:to_show => Section.where("active='t' and (parent_id in (:ids) or id in (:ids))", :ids=>[Section.find_by_name('Tea'), Section.find_by_name('Coffee')].map(&:id)).order('random()').limit(4)}
-%div{:style=>"text-align:center;"} Или кофе? 
-%p Маленькая <a href="/sections/72">чашечка</a>, бесподобный <a href="/sections/38">аромат</a> и бархатная пенка... Для утонченных людей, имеющих свой неповторимый стиль... Для тех, кто знает, как ценны минуты по утрам... Для тех, кто умеет получать максимум удовольствия от жизни... Для тех, кто любит роскошь во всех её проявлениях...
-Черный, жгучий, манящий, дарящий тепло... Свежеобжаренные <a href="/sections/34">зерна</a> и дивный опьяняющий запах... Крошечный эспрессо или воздушный капучинно? Нежная робуста или крепкая арабика? Выбирайте свой <a href="/sections/2">кофе</a>, который подарит вам:
+%div{:style=>"text-align:center;"} <b>Или кофе?</b> 
+%p Маленькая <a class="semibold" href="/sections/72">чашечка</a>, бесподобный <a class="semibold" href="/sections/38">аромат</a> и бархатная пенка... Для утонченных людей, имеющих свой неповторимый стиль... Для тех, кто знает, как ценны минуты по утрам... Для тех, кто умеет получать максимум удовольствия от жизни... Для тех, кто любит роскошь во всех её проявлениях...
+Черный, жгучий, манящий, дарящий тепло... Свежеобжаренные <a class="semibold" href="/sections/34">зерна</a> и дивный опьяняющий запах... Крошечный эспрессо или воздушный капучинно? Нежная робуста или крепкая арабика? Выбирайте свой <a class="semibold" href="/sections/2">кофе</a>, который подарит вам:
 %ul
  %li Ясное бодрое утро
  %li Прилив сил и работоспособности
  %li Удачные деловые переговоры
  %li Семейный приятный вечер
  %li Тихое спокойное уединение
-%p Неважно, будете ли вы сами священнодействовать <a href="/sections/77">над туркой</a>, или доверитесь <a href="/sections/80">кофеварке</a>. Важен результат — только из качественных <a href="/sections/45">зерен</a> получается восхитительный будоражащий напиток. В нашем магазине вы можете купить как <a href="/sections/49">молотый кофе</a>, так и <a href="/sections/39">кофе в зернах</a>. Для себя или своих близких в подарок. И это будет поистине великолепный вкусный кофе!
+%p Неважно, будете ли вы сами священнодействовать <a class="semibold" href="/sections/77">над туркой</a>, или доверитесь <a class="semibold" href="/sections/80">кофеварке</a>. Важен результат — только из качественных <a class="semibold" href="/sections/45">зерен</a> получается восхитительный будоражащий напиток. В нашем магазине вы можете купить как <a class="semibold" href="/sections/49">молотый кофе</a>, так и <a class="semibold" href="/sections/39">кофе в зернах</a>. Для себя или своих близких в подарок. И это будет поистине великолепный вкусный кофе!
 
 
 = render :partial => 'main/random_sections_block', :locals=>{:to_show => Section.where("active='t' and (parent_id in (:ids) or id in (:ids))", :ids=>[Section.find_by_name('Coffee')].map(&:id)).order('random()').limit(4)}
 
-%p А у вас всё готово к уютному <a href="/sections/66">чаепитию</a> или к насыщенному кофейному вечеру? 
+%p А у вас всё готово к уютному <a class="semibold" href="/sections/66">чаепитию</a> или к насыщенному кофейному вечеру? 
 %p В таких вещах не может быть ненужных мелочей, есть только важные детали... Без них наслаждение будет неполным, а вкус  — нераскрытым...
-%p Пусть ваш дом станет гостеприимным вместе с нашими <a href="/sections/75">заварочными чайниками</a>, <a href="/sections/77">турками</a>, <a href="/sections/80">кофеварками</a> и <a href="/sections/72">красивыми чашками</a>! Сделайте свою чайную церемонию идеальной, используя для неё настоящие <a href="/sections/65">китайские принадлежности</a>, изящные <a href="/sections/67">подносы</a> и удобные <a href="/sections/71">подставки-подогреватели</a>. Не забудьте про <a href="/sections/51">сахар</a>, <a href="/sections/60">конфеты</a> и <a href="/sections/57">маленькие шоколадки</a> &mdash; побалуйте своих сладкоежек!  
-%p Хотите согреть любовью и окутать заботой родных? В этом вам помогут наши <a href="/sections/50">горячий шоколад</a> и <a href="/sections/23">какао</a> — необыкновенно вкусные и действительно теплые напитки...
+%p Пусть ваш дом станет гостеприимным вместе с нашими <a class="semibold" href="/sections/75">заварочными чайниками</a>, <a class="semibold" href="/sections/77">турками</a>, <a class="semibold" href="/sections/80">кофеварками</a> и <a class="semibold" href="/sections/72">красивыми чашками</a>! Сделайте свою чайную церемонию идеальной, используя для неё настоящие <a class="semibold" href="/sections/65">китайские принадлежности</a>, изящные <a class="semibold" href="/sections/67">подносы</a> и удобные <a class="semibold" href="/sections/71">подставки-подогреватели</a>. Не забудьте про <a class="semibold" href="/sections/51">сахар</a>, <a class="semibold" href="/sections/60">конфеты</a> и <a class="semibold" href="/sections/57">маленькие шоколадки</a> &mdash; побалуйте своих сладкоежек!  
+%p Хотите согреть любовью и окутать заботой родных? В этом вам помогут наши <a class="semibold" href="/sections/50">горячий шоколад</a> и <a class="semibold" href="/sections/23">какао</a> — необыкновенно вкусные и действительно теплые напитки...
 %p Вот теперь все готово:
 %ul
  %li для хорошей компании
@@ -46,7 +47,7 @@
 
 
 %p &nbsp;
-%p Почему именно мы? 
+%p{:style=>"font-weight:bold;font-size:18px;"} Почему именно мы? 
 %p Конкурентов на рынке много, но о них мы не будем вести разговор, мы расскажем вам, почему стоит быть <span style="font-weight:bold;"><span  style="font-size:18px;">нашим</span> горячо любимым клиентом</span>:
 %ul
  %li Во-первых, покупая у нас любой товар, вы можете быть уверены в его превосходном качестве.  Контроль ведется на всех этапах: от хранения на складе до своевременной доставки, и для всего ассортимента: от чайной ложечки до большой кофеварки.
@@ -54,5 +55,5 @@
  %li В-третьих,  вы экономите свои время и деньги: при заказе от 1000 рублей, мы быстро и бесплатно доставим вам товар в любую точку Москвы. Хотите узнать больше? Вам в раздел «Доставка и оплата».
  %li В-четвертых, мы ценим наше сотрудничество и поэтому делаем для вас маленькие приятные сюрпризы. Пожалуйста, будьте готовы к небольшим подаркам при получении заказа
  %li В-пятых, с нами просто приятно работать. У нас не теряются заказы, не опаздывает доставка, и мы всегда оправдываем доверие клиентов, дорожа ими и своей репутацией.
-%p{:style=>"text-align:right;"} Пора положить начало нашей дружбе, не правда ли?  
+%p{:style=>"text-align:right;font-weight:700;font-size:18px;"} Пора положить начало нашей дружбе, не правда ли?  
 
