--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,9 +1,9 @@
 !!!
 %html
  %head
-  %title= @title || "Чашка..."
+  %title= @title || "Чашка чая"
   = stylesheet_link_tag :all
-  = javascript_include_tag :defaults
+  = javascript_include_tag :defaults, "jquery.lightbox-0.5.js"
   = csrf_meta_tag
  %body{:style=>"padding:0px;border:0px;margin:0px;background-color:#a67c52;"}
   %div{:align=>"center"}
