--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -20,6 +20,6 @@
   %div{:style=>":height:20px;clear: both;"}
   <script type="text/javascript">
   $(function() {
-  $('a.lightbox').lightBox(); // Select all links with lightbox class
+  $('a.lightbox').lightBox({ imageLoading:'/images/lightbox-ico-loading.gif', imageBtnClose:'/images/lightbox-btn-close.gif', imageBlank:'/images/lightbox-blank.gif'}); // Select all links with lightbox class
   });
   </script>
