--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
  %head
   %title= @title || "Чашка чая"
   = stylesheet_link_tag :all
-  = javascript_include_tag :defaults, "jquery.lightbox-0.5.js"
+  = javascript_include_tag :defaults, "jquery.lightbox-0.5.min.js", "jquery.jcarousel.min.js"
   = csrf_meta_tag
  %body{:style=>"padding:0px;border:0px;margin:0px;background-color:#a67c52;"}
   %div{:align=>"center"}
@@ -58,17 +58,18 @@
      %td{:style=>"height:20px;"} &nbsp;
      -#%td{:colspan=>2, :style=>"height:20px;"} &nbsp;
 
-  <!-- Yandex.Metrika counter -->
-  <div style="display:none;"><script type="text/javascript">
-  (function(w, c) {
-  (w[c] = w[c] || []).push(function() {
-  try {
-  w.yaCounter2950633 = new Ya.Metrika(2950633);
-  } catch(e) {}
-  });
-  })(window, 'yandex_metrika_callbacks');
-  </script></div>
-  <script src="//mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
-  <noscript><div style="position:absolute"><img src="//mc.yandex.ru/watch/2950633" alt="" /></div></noscript>
-  <!-- /Yandex.Metrika counter -->
+  - if Rails.env == "production"
+   <!-- Yandex.Metrika counter -->
+   <div style="display:none;"><script type="text/javascript">
+   (function(w, c) {
+   (w[c] = w[c] || []).push(function() {
+   try {
+   w.yaCounter2950633 = new Ya.Metrika(2950633);
+   } catch(e) {}
+   });
+   })(window, 'yandex_metrika_callbacks');
+   </script></div>
+   <script src="//mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
+   <noscript><div style="position:absolute"><img src="//mc.yandex.ru/watch/2950633" alt="" /></div></noscript>
+   <!-- /Yandex.Metrika counter -->
 
